# WFX-Fork

./: .ciignore  .gitignore  .todo  404.html  CMakeLists.txt  CONTRIBUTING.md  NOTICES.md  README.md  index.html  mkdocs.yml  wfx  wfx.toml
.github/workflows/: ci_filter.yml  docs_build.yml  linux_build.yml
api_reference/middleware/: index.html
api_reference/overview/: index.html
api_reference/request_and_response/: index.html
api_reference/routing/: index.html
cli/: main.cpp
cli/commands/cmd_build/: build.cpp  build.hpp
cli/commands/cmd_dev/: dev.cpp  dev.hpp  dev_helper.cpp  dev_helper.hpp
cli/commands/cmd_doctor/: doctor.cpp
cli/commands/cmd_new/: new.cpp  new.hpp
cli/commands/cmd_run/: run.cpp  run.hpp
cmake/: ssl.cmake  ssl_openssl.cmake
config/: config.cpp  config.hpp  config_helper.hpp
core_concepts/engine_commands/: index.html
core_concepts/project_structure/: index.html
core_concepts/toolchain_toml/: index.html
core_concepts/wfx_toml/: index.html
css/: scrollbar_format.css
docs/: index.md
docs/api_reference/: async.md  constructor.md  forms.md  middleware.md  request_and_response.md  routing.md  templates.md
docs/core_concepts/: engine_commands.md  project_structure.md  wfx_toml.md
docs/css/: code_format.css
docs/getting_started/: first-program.md  installation.md
engine/: core_engine.cpp  core_engine.hpp  engine.cpp  engine.hpp  template_engine.cpp  template_engine.hpp  template_interface.hpp  template_transpiler.cpp
engine/legacy/: lexer.cpp
getting_started/first_program/: index.html
getting_started/installation/: index.html
http/common/: http_detector.cpp  http_detector.hpp  http_error_msgs.hpp  http_global_state.hpp  http_route_common.hpp  route_common.hpp
http/connection/: http_connection.cpp  http_connection.hpp  http_connection_factory.hpp
http/constants/: http_constants.hpp
http/formatters/parser/: http_parser.cpp  http_parser.hpp
http/formatters/serializer/: http_serializer.cpp  http_serializer.hpp
http/headers/: http_headers.cpp  http_headers.hpp  http_headers.ipp
http/limits/ip_connection_limiter/: ip_connection_limiter.cpp  ip_connection_limiter.hpp
http/limits/ip_limiter/: ip_limiter.cpp  ip_limiter.hpp
http/limits/ip_request_limiter/: ip_request_limiter.cpp  ip_request_limiter.hpp
http/middleware/: http_middleware.cpp  http_middleware.hpp
http/request/: http_request.hpp
http/response/: http_response.cpp  http_response.hpp
http/routing/: route_macros.hpp  route_segment.cpp  route_segment.hpp  route_trie.cpp  route_trie.hpp  router.cpp  router.hpp
http/ssl/: http_ssl.hpp  http_ssl_factory.hpp
http/ssl/openssl/: http_openssl.cpp  http_openssl.hpp
include/async/: builtins.hpp  interface.hpp  local_storage.hpp  macros.hpp  promise.hpp  routes.hpp  runtime.hpp  task.hpp
include/core/: constructor.hpp  core.hpp
include/form/: fields.hpp  forms.hpp  renders.hpp  sanitizers.hpp  validators.hpp
include/http/: aliases.hpp  endpoint.hpp  helper.hpp  middleware.hpp  response.hpp  routes.hpp
os_specific/common/filecache/: filecache.cpp
os_specific/linux/: epoll_connection.cpp
os_specific/linux/http/connection/: epoll_connection.cpp  epoll_connection.hpp  io_uring_connection.cpp  io_uring_connection.hpp
os_specific/linux/utils/file_cache/: file_cache.cpp  file_cache.hpp
os_specific/linux/utils/filesystem/: filesystem.cpp  filesystem.hpp
os_specific/windows/http/connection/: accept_ex_manager.cpp  accept_ex_manager.hpp  iocp_connection.cpp  iocp_connection.hpp
search/: search_index.json
shared/apis/: async_api.cpp  async_api.hpp  http_api.cpp  http_api.hpp  master_api.cpp  master_api.hpp
shared/utils/: compiler_macro.hpp  deferred_init_vector.hpp
test/: alloc_pool_mem_usage.cpp  conc_hash_map_mem_usage.cpp  conc_hash_map_move_usage.cpp  move_only_func.cpp  router_speed.cpp
utils/argument_parser/: argument_parser.cpp  argument_parser.hpp
utils/backport/: move_only_function.hpp  string.hpp
utils/buffer_pool/: buffer_pool.cpp  buffer_pool.hpp
utils/common/: typeid.hpp
utils/crypt/: hash.cpp  hash.hpp  string.cpp  string.hpp
utils/dotenv/: dotenv.cpp  dotenv.hpp
utils/filecache/: filecache.cpp  filecache.hpp
utils/filesystem/: filesystem.hpp
utils/fixed_pool/: fixed_pool.cpp  fixed_pool.hpp
utils/functional/: move_only_function.hpp
utils/hash_map/: concurrent_hash_map.hpp  hash_shard.hpp  hash_shard.ipp
utils/hash_map/concurrent_map/: concurrent_hash_map.hpp
utils/logger/: logger.cpp  logger.hpp
utils/math/: math.hpp
utils/perf_timer/: perf_timer.hpp
utils/rw_buffer/: rw_buffer.cpp  rw_buffer.hpp
utils/timer/timer_heap/: timer_heap.cpp
utils/timer/timer_wheel/: timer_wheel.cpp
utils/uuid/: uuid.cpp  uuid.hpp
